The program is able to read in the data. The data csvs are added.

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -13,6 +13,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hurricane_data = pd.read_csv('BRTK_SHIPS_2000to2019_IMERG_OK_Request_2023_FINAL.csv')\n",
+    "population_data = pd.read_csv('florida-population-2023-07-08.csv')\n",
+    "labor_data = pd.read_csv('labor-productivity-by-state-and-region.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
