--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -13,13 +13,288 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "hurricane_data = pd.read_csv('BRTK_SHIPS_2000to2019_IMERG_OK_Request_2023_FINAL.csv')\n",
     "population_data = pd.read_csv('florida-population-2023-07-08.csv')\n",
-    "labor_data = pd.read_csv('labor-productivity-by-state-and-region.csv')\n"
+    "labor_data = pd.read_csv('labor-productivity-by-state-and-region.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "True",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/Library/Python/3.11/lib/python/site-packages/pandas/core/indexes/base.py:3652\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3651\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 3652\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[1;32m   3653\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
+      "File \u001b[0;32m~/Library/Python/3.11/lib/python/site-packages/pandas/_libs/index.pyx:147\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m~/Library/Python/3.11/lib/python/site-packages/pandas/_libs/index.pyx:176\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7080\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: True",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m all_florida_storms \u001b[39m=\u001b[39m hurricane_data[hurricane_data[\u001b[39m'\u001b[39;49m\u001b[39mLATITUDE\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49mall() \u001b[39m<\u001b[39;49m\u001b[39m=\u001b[39;49m \u001b[39m31.0\u001b[39;49m \u001b[39mand\u001b[39;49;00m hurricane_data[\u001b[39m'\u001b[39;49m\u001b[39mLONGITUDE\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49mall() \u001b[39m>\u001b[39;49m\u001b[39m=\u001b[39;49m \u001b[39m-\u001b[39;49m\u001b[39m87.0\u001b[39;49m]\n\u001b[1;32m      2\u001b[0m all_florida_storms\u001b[39m.\u001b[39mhead()\n",
+      "File \u001b[0;32m~/Library/Python/3.11/lib/python/site-packages/pandas/core/frame.py:3760\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3758\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m   3759\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3760\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[1;32m   3761\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3762\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m~/Library/Python/3.11/lib/python/site-packages/pandas/core/indexes/base.py:3654\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3652\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3653\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[0;32m-> 3654\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[1;32m   3655\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[1;32m   3656\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3657\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3658\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3659\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: True"
+     ]
+    }
+   ],
+   "source": [
+    "# Failed attempt to filter out all storms that did hit Florida\n",
+    "all_florida_storms = hurricane_data[hurricane_data['LATITUDE'].all() <= 31.0 and hurricane_data['LONGITUDE'].all() >= -87.0]\n",
+    "all_florida_storms.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<enumerate at 0x12e6abd80>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "enumerate(hurricane_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GIS_ID</th>\n",
+       "      <th>BASIN</th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>JULDAY</th>\n",
+       "      <th>LATITUDE</th>\n",
+       "      <th>LONGITUDE</th>\n",
+       "      <th>MSLP</th>\n",
+       "      <th>STORM_NAME</th>\n",
+       "      <th>STORM_ID</th>\n",
+       "      <th>CAT</th>\n",
+       "      <th>...</th>\n",
+       "      <th>TADV_12</th>\n",
+       "      <th>TADV_13</th>\n",
+       "      <th>HMEAN100</th>\n",
+       "      <th>RA300</th>\n",
+       "      <th>HRA100</th>\n",
+       "      <th>HRA300</th>\n",
+       "      <th>RAIN_AXIS_100</th>\n",
+       "      <th>RAIN_AXIS_300</th>\n",
+       "      <th>RAIN_AXIS_100_300</th>\n",
+       "      <th>RMR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>158</th>\n",
+       "      <td>ATL_200011_C1_2000091700</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>2000091700</td>\n",
+       "      <td>2451804.50</td>\n",
+       "      <td>25.200001</td>\n",
+       "      <td>-85.400002</td>\n",
+       "      <td>985</td>\n",
+       "      <td>GORDON</td>\n",
+       "      <td>200011</td>\n",
+       "      <td>C1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>15.988711</td>\n",
+       "      <td>0.560085</td>\n",
+       "      <td>0.416404</td>\n",
+       "      <td>0.252393</td>\n",
+       "      <td>47.845856</td>\n",
+       "      <td>42.621845</td>\n",
+       "      <td>39.690224</td>\n",
+       "      <td>235</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>ATL_200011_C1_2000091706</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>2000091706</td>\n",
+       "      <td>2451804.75</td>\n",
+       "      <td>26.100000</td>\n",
+       "      <td>-84.900002</td>\n",
+       "      <td>981</td>\n",
+       "      <td>GORDON</td>\n",
+       "      <td>200011</td>\n",
+       "      <td>C1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>8.641450</td>\n",
+       "      <td>0.624247</td>\n",
+       "      <td>0.362776</td>\n",
+       "      <td>0.171570</td>\n",
+       "      <td>65.511658</td>\n",
+       "      <td>43.243092</td>\n",
+       "      <td>32.676018</td>\n",
+       "      <td>215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160</th>\n",
+       "      <td>ATL_200011_C1_2000091712</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>2000091712</td>\n",
+       "      <td>2451805.00</td>\n",
+       "      <td>27.100000</td>\n",
+       "      <td>-84.300003</td>\n",
+       "      <td>987</td>\n",
+       "      <td>GORDON</td>\n",
+       "      <td>200011</td>\n",
+       "      <td>C1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>8.859593</td>\n",
+       "      <td>0.551223</td>\n",
+       "      <td>0.047319</td>\n",
+       "      <td>0.077632</td>\n",
+       "      <td>54.603168</td>\n",
+       "      <td>45.882404</td>\n",
+       "      <td>42.300529</td>\n",
+       "      <td>175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161</th>\n",
+       "      <td>ATL_200011_C1_2000091718</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>2000091718</td>\n",
+       "      <td>2451805.25</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>-83.800003</td>\n",
+       "      <td>985</td>\n",
+       "      <td>GORDON</td>\n",
+       "      <td>200011</td>\n",
+       "      <td>C1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>6.096287</td>\n",
+       "      <td>0.388869</td>\n",
+       "      <td>0.025237</td>\n",
+       "      <td>0.019851</td>\n",
+       "      <td>44.205284</td>\n",
+       "      <td>29.320780</td>\n",
+       "      <td>22.299374</td>\n",
+       "      <td>345</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>162</th>\n",
+       "      <td>ATL_200011_TS_2000091800</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>2000091800</td>\n",
+       "      <td>2451805.50</td>\n",
+       "      <td>28.900000</td>\n",
+       "      <td>-83.400002</td>\n",
+       "      <td>989</td>\n",
+       "      <td>GORDON</td>\n",
+       "      <td>200011</td>\n",
+       "      <td>TS</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>5.810147</td>\n",
+       "      <td>0.437434</td>\n",
+       "      <td>0.015773</td>\n",
+       "      <td>0.036157</td>\n",
+       "      <td>72.779587</td>\n",
+       "      <td>59.057453</td>\n",
+       "      <td>51.857956</td>\n",
+       "      <td>175</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 249 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       GIS_ID BASIN        DATE      JULDAY   LATITUDE   \n",
+       "158  ATL_200011_C1_2000091700   ATL  2000091700  2451804.50  25.200001  \\\n",
+       "159  ATL_200011_C1_2000091706   ATL  2000091706  2451804.75  26.100000   \n",
+       "160  ATL_200011_C1_2000091712   ATL  2000091712  2451805.00  27.100000   \n",
+       "161  ATL_200011_C1_2000091718   ATL  2000091718  2451805.25  28.000000   \n",
+       "162  ATL_200011_TS_2000091800   ATL  2000091800  2451805.50  28.900000   \n",
+       "\n",
+       "     LONGITUDE  MSLP STORM_NAME  STORM_ID CAT  ... TADV_12  TADV_13   \n",
+       "158 -85.400002   985     GORDON    200011  C1  ...  -999.0   -999.0  \\\n",
+       "159 -84.900002   981     GORDON    200011  C1  ...  -999.0   -999.0   \n",
+       "160 -84.300003   987     GORDON    200011  C1  ...  -999.0   -999.0   \n",
+       "161 -83.800003   985     GORDON    200011  C1  ...  -999.0   -999.0   \n",
+       "162 -83.400002   989     GORDON    200011  TS  ...  -999.0   -999.0   \n",
+       "\n",
+       "      HMEAN100     RA300    HRA100    HRA300  RAIN_AXIS_100  RAIN_AXIS_300   \n",
+       "158  15.988711  0.560085  0.416404  0.252393      47.845856      42.621845  \\\n",
+       "159   8.641450  0.624247  0.362776  0.171570      65.511658      43.243092   \n",
+       "160   8.859593  0.551223  0.047319  0.077632      54.603168      45.882404   \n",
+       "161   6.096287  0.388869  0.025237  0.019851      44.205284      29.320780   \n",
+       "162   5.810147  0.437434  0.015773  0.036157      72.779587      59.057453   \n",
+       "\n",
+       "     RAIN_AXIS_100_300  RMR  \n",
+       "158          39.690224  235  \n",
+       "159          32.676018  215  \n",
+       "160          42.300529  175  \n",
+       "161          22.299374  345  \n",
+       "162          51.857956  175  \n",
+       "\n",
+       "[5 rows x 249 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_florida_storm_indicies = []\n",
+    "for i in range(len(hurricane_data)):\n",
+    "    if(24.5 <= hurricane_data['LATITUDE'][i] <= 31.0 and -79.8 >= hurricane_data['LONGITUDE'][i] >= -87.0):\n",
+    "        all_florida_storm_indicies.append(i)\n",
+    "\n",
+    "all_florida_storms = hurricane_data.iloc[all_florida_storm_indicies]\n",
+    "all_florida_storms.head()"
    ]
   },
   {
