--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -119,18 +119,21 @@
     "# Listing out all the storms that hit Florida\n",
     "# ALso listing all major hurricanes that hit Florida\n",
     "\n",
+    "major_hurricane_indicies = []\n",
     "print(all_florida_storms['STORM_NAME'].unique())\n",
     "for i in range(len(all_florida_storms)):\n",
     "    try:\n",
     "        if(int(all_florida_storms['CAT'][i][1]) >= 3):\n",
     "            print(all_florida_storms['STORM_NAME'][i])\n",
+    "            major_hurricane_indicies.append(i)\n",
     "    except ValueError:\n",
-    "        pass"
+    "        pass\n",
+    "major_hurricanes = all_florida_storms.iloc[major_hurricane_indicies]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -238,14 +241,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/94/g9q138r57c77g58pkrfmdwbm0000gp/T/ipykernel_4427/794504589.py:8: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/var/folders/94/g9q138r57c77g58pkrfmdwbm0000gp/T/ipykernel_35119/794504589.py:8: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels(labels = population_data.iloc[:, 0], fontsize = 6)\n"
      ]
     },
@@ -262,6 +265,7 @@
    ],
    "source": [
     "# Plotting population data over year\n",
+    "# Later change colors of points\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "plt.scatter(x = population_data.iloc[:, 0], y = population_data.iloc[:, 1])\n",
@@ -273,6 +277,235 @@
     "ax.set_xlabel('Year')\n",
     "ax.set_ylabel('Population (millions)')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "florida_labor_data = labor_data[labor_data['Area'] == 'Florida']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sector</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Basis</th>\n",
+       "      <th>Measure</th>\n",
+       "      <th>Units</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Private nonfarm</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>All workers</td>\n",
+       "      <td>Hours worked</td>\n",
+       "      <td>Millions of hours</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>13,266.371</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Private nonfarm</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>All workers</td>\n",
+       "      <td>Hours worked</td>\n",
+       "      <td>Millions of hours</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>12,526.034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Private nonfarm</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>All workers</td>\n",
+       "      <td>Hours worked</td>\n",
+       "      <td>Millions of hours</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>11,631.709</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Private nonfarm</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>All workers</td>\n",
+       "      <td>Hours worked</td>\n",
+       "      <td>Millions of hours</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>11,606.950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Private nonfarm</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>All workers</td>\n",
+       "      <td>Hours worked</td>\n",
+       "      <td>Millions of hours</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>11,611.617</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>475</th>\n",
+       "      <td>Private nonfarm</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>All workers</td>\n",
+       "      <td>Unit labor costs</td>\n",
+       "      <td>% Change from previous year</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>3.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>476</th>\n",
+       "      <td>Private nonfarm</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>All workers</td>\n",
+       "      <td>Unit labor costs</td>\n",
+       "      <td>% Change from previous year</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>477</th>\n",
+       "      <td>Private nonfarm</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>All workers</td>\n",
+       "      <td>Unit labor costs</td>\n",
+       "      <td>% Change from previous year</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>3.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>478</th>\n",
+       "      <td>Private nonfarm</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>All workers</td>\n",
+       "      <td>Unit labor costs</td>\n",
+       "      <td>% Change from previous year</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>479</th>\n",
+       "      <td>Private nonfarm</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>All workers</td>\n",
+       "      <td>Unit labor costs</td>\n",
+       "      <td>% Change from previous year</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>7.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>480 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Sector     Area        Basis           Measure   \n",
+       "0    Private nonfarm  Florida  All workers      Hours worked  \\\n",
+       "1    Private nonfarm  Florida  All workers      Hours worked   \n",
+       "2    Private nonfarm  Florida  All workers      Hours worked   \n",
+       "3    Private nonfarm  Florida  All workers      Hours worked   \n",
+       "4    Private nonfarm  Florida  All workers      Hours worked   \n",
+       "..               ...      ...          ...               ...   \n",
+       "475  Private nonfarm  Florida  All workers  Unit labor costs   \n",
+       "476  Private nonfarm  Florida  All workers  Unit labor costs   \n",
+       "477  Private nonfarm  Florida  All workers  Unit labor costs   \n",
+       "478  Private nonfarm  Florida  All workers  Unit labor costs   \n",
+       "479  Private nonfarm  Florida  All workers  Unit labor costs   \n",
+       "\n",
+       "                           Units  Year       Value  \n",
+       "0              Millions of hours  2007  13,266.371  \n",
+       "1              Millions of hours  2008  12,526.034  \n",
+       "2              Millions of hours  2009  11,631.709  \n",
+       "3              Millions of hours  2010  11,606.950  \n",
+       "4              Millions of hours  2011  11,611.617  \n",
+       "..                           ...   ...         ...  \n",
+       "475  % Change from previous year  2018         3.8  \n",
+       "476  % Change from previous year  2019         2.6  \n",
+       "477  % Change from previous year  2020         3.9  \n",
+       "478  % Change from previous year  2021         5.0  \n",
+       "479  % Change from previous year  2022         7.1  \n",
+       "\n",
+       "[480 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "florida_labor_data = florida_labor_data.reset_index(drop=True)\n",
+    "florida_labor_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Sector     Area        Basis       Measure              Units   \n",
+      "0  Private nonfarm  Florida  All workers  Hours worked  Millions of hours  \\\n",
+      "1  Private nonfarm  Florida  All workers  Hours worked  Millions of hours   \n",
+      "2  Private nonfarm  Florida  All workers  Hours worked  Millions of hours   \n",
+      "3  Private nonfarm  Florida  All workers  Hours worked  Millions of hours   \n",
+      "4  Private nonfarm  Florida  All workers  Hours worked  Millions of hours   \n",
+      "\n",
+      "   Year       Value  \n",
+      "0  2007  13,266.371  \n",
+      "1  2008  12,526.034  \n",
+      "2  2009  11,631.709  \n",
+      "3  2010  11,606.950  \n",
+      "4  2011  11,611.617  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(florida_labor_data[florida_labor_data['Measure'] == 'Hours worked'].head())"
    ]
   },
   {
