Got years of major hurricanes.

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,10 @@
     "            major_hurricane_indicies.append(i)\n",
     "    except ValueError:\n",
     "        pass\n",
-    "major_hurricanes = all_florida_storms.iloc[major_hurricane_indicies]\n"
+    "major_hurricanes = all_florida_storms.iloc[major_hurricane_indicies]\n",
+    "\n",
+    "years = [int(str(date)[:4]) for date in major_hurricanes['DATE']]\n",
+    "print(years)"
    ]
   },
   {
