Start of labor data plot.

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -513,7 +513,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "plt.scatter()"
+   ]
   }
  ],
  "metadata": {
