--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,8 +57,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -112,6 +114,45 @@
     "\n",
     "years = [int(str(date)[:4]) for date in major_hurricanes['DATE']]\n",
     "print(years)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                     GIS_ID        DATE  VMAX\n",
+      "0  ATL_200011_C1_2000091700  2000091700    65\n",
+      "1  ATL_200011_C1_2000091706  2000091706    70\n",
+      "2  ATL_200011_C1_2000091712  2000091712    65\n",
+      "3  ATL_200011_C1_2000091718  2000091718    65\n",
+      "4  ATL_200011_TS_2000091800  2000091800    60\n",
+      "                     GIS_ID        DATE  NOHC_1\n",
+      "0  ATL_200011_C1_2000091700  2000091700   113.0\n",
+      "1  ATL_200011_C1_2000091706  2000091706    42.0\n",
+      "2  ATL_200011_C1_2000091712  2000091712    34.0\n",
+      "3  ATL_200011_C1_2000091718  2000091718     0.0\n",
+      "4  ATL_200011_TS_2000091800  2000091800     0.0\n",
+      "                     GIS_ID        DATE  SHIPS_POT\n",
+      "0  ATL_200011_C1_2000091700  2000091700       74.0\n",
+      "1  ATL_200011_C1_2000091706  2000091706       83.0\n",
+      "2  ATL_200011_C1_2000091712  2000091712       78.0\n",
+      "3  ATL_200011_C1_2000091718  2000091718       65.0\n",
+      "4  ATL_200011_TS_2000091800  2000091800       56.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "storm_intensity = all_florida_storms.loc[:, ('GIS_ID', 'DATE', 'VMAX')]\n",
+    "print(storm_intensity.head())\n",
+    "ocean_heat_content = all_florida_storms.loc[:, ('GIS_ID', 'DATE', 'NOHC_1')]\n",
+    "print(ocean_heat_content.head())\n",
+    "pot_data = all_florida_storms.loc[:, (\"GIS_ID\", \"DATE\", \"SHIPS_POT\")]\n",
+    "print(pot_data.head())"
    ]
   },
   {
@@ -451,7 +492,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -465,9 +506,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.9"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
