Added a place to begin our report.

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -692,10 +692,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Report begins below"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
