Prepared Presentation Materials.

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -1,6 +1,34 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introduction"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Research Question: What is the level of impact of tropical cyclones on the productivity of the state of Florida as measured in monetary cost and working time lost between 2000-2019?__\n",
+    "\n",
+    "Hurricane Data:\n",
+    "* This contains many environmental parameters of all hurricanes across the world from 2000-2019.\n",
+    "* It will be used to track changes in the Floridian environment over time and years of significant hurricane activity.\n",
+    "\n",
+    "Population Data:\n",
+    "* This contains the population of Florida from 1900-2022.\n",
+    "* It will be used to analyze how the population of Florida has been affected by hurricanes.\n",
+    "\n",
+    "Labor Hours Data:\n",
+    "* This contains the number of labor hours worked in Florida from 2007-2022.\n",
+    "* It will be used to analyze how the labor hours in Florida have been affected by hurricanes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -11,6 +39,14 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Methods of Analysis"
    ]
   },
   {
@@ -721,23 +757,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Report begins below"
+    "# Results Report "
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "__Results:__\n",
     "There seems to be no pattern between the working hours and the major hurricane years.\n",
-    "Even though there's a natural disaster happening, people tend to work as usual (probably online/construction)\n",
+    "The population of Florida continually increased between 2000-2019, despite the impact of major hurricanes.\n",
+    "In addition, hurricanes hitting Florida do tend to have a increasing trend in intensity.\n",
+    "However, the waters around Florida tend to have a decreasing trend in heat content.\n",
     "\n",
+    "__Conclusions:__\n",
+    "Even though there's a natural disaster happening, people tend to work as usual (probably online/construction)\n",
     "And obviously, hurricanes in Florida tend to have less anthropogenic impact than in other regions."
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Discussions"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The progress we made in this project is significant, but there was little cross analysis of the impacts of hurricane environmental data on Floridian productivity.\n",
+    "If we were to continue, we would like to analyze the causes of Floridian resiliency in the face of hurricanes.\n",
+    "We would also like to study other regions of the world similarly impacted by hurricanes to see if they have similar trends in productivity and potentially apply the lessons learned from Florida to other regions."
+   ]
   }
  ],
  "metadata": {
